# poster-kadi

./: .gitattributes  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build.yml
app/: globals.css  layout.tsx  page.tsx
backend/: main.py  requirements.txt
components/: CropModal.tsx  LayoutGenerator.tsx  SheetPreview.tsx
electron/: main.js  preload.js
lib/: exportLayout.ts  imageTools.ts  printLayout.ts
scripts/: setup_tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
