[package]
name = "poster-kadai"
version = "0.1.0"
description = "Poster Kadai Print Layout Generator"
authors = ["Poster Kadai Team"]
edition = "2021"

[lib]
name = "poster_kadai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = [] }
tauri-plugin-shell = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
